--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "start": "NODE_ENV=production node server/server.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "nodemon": "^3.1.4"
   }
 }
