--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-NODE_ENV = production
+MONGO_URI=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.0.2
+NODE_ENV=production
