--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon server/server.js",
-    "start": "NODE_ENV=production node server/server.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "type": "module",
