--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.15"
+MONGO_URI="mongodb+srv://mikizenebe:miki1321@mik-cluster.jcq56h1.mongodb.net/music-app?retryWrites=true&w=majority&appName=Mik-Cluster"
 NODE_ENV=production
