--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "start": "node server.js"
   },
   "type": "module",
   "keywords": [],
